<resources>
    <string name="app_name">AsYourWish</string>
    <string name="first_customer">UserName: SuperMan</string>
    <string name="pass_word">PassWord: SuperMan</string>
    <string name="login">Login</string>
    <string name="journey_begins">Journey begins！</string>
    <string name="clear">Clear</string>
    <string name="first_step">This is a first step!We gonna do more!</string>
    <string name="test_ndk">TestNdk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="installed_app">Here are installed app</string>
    <string name="sd_card_app">Here are apps in sd card</string>
    <string name="remote_app">Here are remote app</string>

    <string name="title_activity_app_start">AppStartActivity</string>
    <string name="start_mikex_app_box">Start MikexApp</string>
    <string name="start_mikex_app_gl">Start MikexGL</string>

    <string name="not_installed">Not been installed</string>
</resources>
