<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_customer" />

        <TextView
            android:id="@+id/tv_pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name_user"
            android:text="@string/pass_word" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pass_word"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_pass_word"
            android:layout_toEndOf="@+id/btn_login"
            android:layout_toRightOf="@+id/btn_login"
            android:text="@string/clear" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_start_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_login">

        <TextView
            android:id="@+id/tv_everything_goes_well"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/journey_begins" />
    </RelativeLayout>


</RelativeLayout><!--<?xml version="1.0" encoding="utf-8"?>--><!--<android.support.constraint.ConstraintLayout--><!--xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--tools:context="com.mikex.asyourwish.activities.MainActivity">-->

    <!--<TextView--><!--android:id="@+id/sample_text"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="Hello World!"--><!--app:layout_constraintBottom_toBottomOf="parent"--><!--app:layout_constraintLeft_toLeftOf="parent"--><!--app:layout_constraintRight_toRightOf="parent"--><!--app:layout_constraintTop_toTopOf="parent" />-->

    <!--</android.support.constraint.ConstraintLayout>-->
